# nl_sql_agent

./: .env.example  .gitignore  .openclaude-profile.json  IMPLEMENTATION_GUIDE.md  Makefile  README.md  jde_tables_fully_elaborated.csv
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5b41f798d01d_create_persistence_tables.py  7c3f2a91e6e4_add_schema_ddl_seed_dml_execution.py  a1b2c3d4e5f6_add_datasets_table.py  b2c3d4e5f6a7_add_is_manual_edit_to_iterations.py  c3d4e5f6a7b8_add_missing_columns_to_requests.py  d4e5f6a7b8c9_add_debate_transcript_to_iterations.py
backend/app/: main.py
backend/app/agents/: __init__.py  crew_setup.py  single_shot.py
backend/app/agents/debate/: __init__.py  debate_runner.py  models.py  participants.py  termination.py  transcript.py
backend/app/api/: datasets.py  feedback.py  health.py  requests.py  sandbox.py  schema.py  stream.py  validate.py
backend/app/core/: config.py  database.py  errors.py  langfuse_tracer.py  logging.py  maintenance.py  metrics.py  rate_limiter.py  redis.py  telemetry.py
backend/app/models/: __init__.py  base.py  enums.py  session.py  types.py
backend/app/sandbox/: container.py  executor.py  manager.py
backend/app/schemas/: requests.py
backend/app/services/: __init__.py  dataset_service.py  feedback_service.py  janitor.py  request_service.py  schema_extractor.py  session_service.py  startup_ingestion.py  stream_events.py  stream_manager.py
backend/app/validators/: sql_guard.py
backend/tests/: conftest.py  test_debate_runner.py  test_debate_termination.py  test_e2e.py  test_feedback.py  test_health.py  test_persistence.py  test_sandbox_integration.py  test_sql_guard.py
docker/: compose.dev.yml  nlsql-clickhouse-config.xml
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentTimeline.tsx  DatasetUpload.tsx  DebateView.tsx  HealthStatus.tsx  NlSqlInterface.tsx  SandboxDiagnostics.tsx
frontend/lib/: api.ts  useAgentStream.ts
